# depc

./: Examples.depc  README.md  depc.cabal  dependentc.cabal
src/: Core.hs  Main.hs  Parser.hs
