name:                depc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nau/depc
license:             BSD3
license-file:        LICENSE
author:              Alexander Nemish
maintainer:          anemish@gmail.com
copyright:           2018 Alexander Nemish
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable depc
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:      Core,
                      Parser
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5,
                      containers,
                      template-haskell,
                      mtl,
                      megaparsec,
                      prettyprinter,
                      prettyprinter-ansi-terminal
