name:                dependentc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nau/dependentc
license:             BSD3
license-file:        LICENSE
author:              Alexander Nemish
maintainer:          anemish@gmail.com
copyright:           2018 Alexander Nemish
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hott
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
